2008-09-01	Jannis Pohlmann	<jannis@xfce.org>

	* dialogs/keyboard-settings/shortcuts-dialog.c,
	  xfce4-settings-helper/keyboard-shortcuts.c: Add two new functions
	  called get_modifier_masks() and get_ignore_mask(). The first
	  determines to which of the Mod2-Mod5 modifiers CapsLock, NumLock and
	  ScrollLock are mapped and generates a modifier mask for them. The
	  latter combines this mask with the IGNORED_MODIFIERS mask which we
	  already used before and which includes GDK_HYPER_MASK etc.. This
	  mask is then used in several places to avoid these modifiers to
	  appear in the result of gtk_accelerator_name() and to properly grab
	  the shortcuts. This should fix bug #4304.
.
2008-08-31	Jannis Pohlmann <jannis@xfce.org>

	* dialogs/keyboard-settings/shortcut-dialog.c: Ignore
	  GDK_SUPER_MASK, GDK_HYPER_MASK and GDK_META_MASK when parsing
	  key release events. xfce4-settings-helper handles X events
	  instead of Gdk events and unlike Gdk X doesn't know which 
	  of the Super, Meta and Hyper keys are mapped to Mod2-Mod5. 
	  Having <Super>, <Meta>, <Hyper> or even <Super>Super_L in the
	  accelerator name will cause the saved shortcut names to be
	  different than the ones generated by parsing X key events.
	  This should fix bug #4304 although I suppose it would be 
	  nicer to determine which keys are mapped to Mod2-Mod5 when
	  parsing X key events from the semantic point of view.

2008-08-30	Jannis Pohlmann <jannis@xfce.org>

	* dialogs/keyboard-settings/main.c: Don't call gtk_widget_hide()
	  after creating the main dialog. This should fix bug #4335.

2008-08-17	Nick Schermer <nick@xfce.org>

	* xfce4-settings-editor/Makefile.am,
	  po/POTFILES.in: Fix distcheck.
	* po/: Regenerate po files.

2008-08-17	Nick Schermer <nick@xfce.org>

	* dialogs/display-settings/: Disable randr 1.2 support
	  for pinky release.

2008-07-27	Nick Schermer <nick@xfce.org>

	* dialogs/mouse-settings/main.c: Always save the RightHand