@@ -1,3 +1,7 @@
+2008-09-04	Jannis Pohlmann <jannis@xfce.org>
+
+	* autogen.sh: Fix git svn revision versioning.
+
 2008-09-01	Jannis Pohlmann	<jannis@xfce.org>
 
 	* dialogs/keyboard-settings/shortcuts-dialog.c,
